extract xdg-launcher into standalone entity

--- a/beholder/PKGBUILD
+++ b/beholder/PKGBUILD
@@ -3,26 +3,23 @@
 pkgname=gog-beholder
 _pkgname="${pkgname#*-}"
 pkgver=2.0.0.1
-pkgrel=5
+pkgrel=6
 pkgdesc="Become the State-installed manager of an apartment building in a grim dystopian future. (GOG version)"
 arch=('x86_64') #TODO: 'i686'
 url="https://www.gog.com/en/game/beholder"
 license=('custom')
-depends=('mesa' 'libpulse' 'libxcursor' 'libxrandr')
+depends=('mesa' 'libpulse' 'libxcursor' 'libxrandr' 'xdg-launcher')
 options=(!strip)
 source=(
   "gog_beholder_${pkgver}.sh"
   "beholder_1.desktop"
-  "beholder.sh"
 )
 md5sums=(
   'e772ed7e9b18743d7e5686f2208491c4'
-  'f1d1b34c3ee7a100b1797cc096b20d4e'
-  'c75d6ce7c04bfdcc2c104521ce5c6c71'
+  '1afab02a639ff5f6c1e6d995a0cf27c0'
 )
 
 package() {
-  install -Dm755 "${srcdir}/beholder.sh" "${pkgdir}/usr/bin/beholder"
   install -Dm755 "${srcdir}/data/noarch/game/Beholder.x86_64" "${pkgdir}/opt/${_pkgname}/Beholder.x86_64"
   install -Dm644 "${srcdir}/beholder_1.desktop" "${pkgdir}/usr/share/applications/beholder_1.desktop"
   install -Dm644 "${srcdir}/data/noarch/support/icon.png" "${pkgdir}/usr/share/icons/hicolor/256x256/apps/${_pkgname}.png"
