--- a/wasteland/1/PKGBUILD
+++ b/wasteland/1/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=gog-wasteland1
 _pkgname="${pkgname#*-}"
 pkgver=2.0.0.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Classic post-apocalyptic RPG. (GOG version)"
 arch=('x86_64') #TODO: 'i686'
 url="https://www.gog.com/en/game/wasteland_the_classic_original"
@@ -12,6 +12,7 @@ depends=(
   'lib32-zlib' 'lib32-libxext' # Both of which are required by 'lib32-mesa'
   'lib32-libxcursor'
   'lib32-libpulse'
+  'xdg-launcher'
 )
 makedepends=('pandoc' 'texlive-latex' 'texlive-fontsrecommended' 'texlive-latexrecommended')
 options=(!strip)
@@ -21,7 +22,6 @@ source=(
   "wasteland_paragraphs.zip"
   "wasteland_reference_card.zip"
   "wasteland_survival_guide.zip"
-  "${_pkgname}.sh"
   "wasteland_1.desktop"
   "https://static.wikia.nocookie.net/wasteland/images/e/ef/Main_map.png"
 )
@@ -31,8 +31,7 @@ sha256sums=(
   '5ba294e0eb422db3b6288196d0fb24bcd2e3312f8fe7c6c04d7a99adb0593f31'
   '72886f734daff7adf13a28d037ab29d000af845273e2438227ddb5f88ddd57ad'
   'd80d9d8bed52fb1b30455b5e440aad6fb74351c995d7d5e29261614f7ca880d0'
-  'aaa5c935b8f68b384e9c2bfae73b335f4b9ec348b012ba230f661bee1dcb3cdd'
-  '4a300c5e3aaffdcf6c17421e646712a2e78fb17dbb45397440fadf43e27616b7'
+  '37fb783865f811d731163bf0b04bb343881f61dd9703c1c6472bef5e2b019b7a'
   '4e4ba4ea0d7795de58c09e21b23b2c9869ce6f85acacd5f6f63d320ce50c2c1a'
 )
 
@@ -43,7 +42,6 @@ build() {
 
 package() {
   cd "${srcdir}/data/noarch/"
-  install -Dm755 "${srcdir}/${_pkgname}.sh" "${pkgdir}/usr/bin/${_pkgname}"
   install -Dm755 "game/wasteland" "${pkgdir}/opt/${_pkgname}/wasteland"
   install -Dm644 "game/wl.default.conf" "${pkgdir}/opt/${_pkgname}/wl.default.conf"
   install -Dm644 "game/wasteland_1_software_license_agreement.pdf" \
