--- a/shadowrun/returns/PKGBUILD
+++ b/shadowrun/returns/PKGBUILD
@@ -20,21 +20,11 @@ source=(
   "gog_shadowrun_returns_${pkgver}.sh"
   "shadowrun-returns.sh"
   "shadowrun.returns.desktop"
-  #XXX: Unable to find and/or build via aur but needed for editor: 
-  "http://ftp.us.debian.org/debian/pool/main/n/nas/libaudio2_1.9.4-7_i386.deb" # Probably could build this with linux32 chroot
-  "https://security.debian.org/debian-security/pool/updates/main/q/qt4-x11/libqt4-network_4.8.7+dfsg-18+deb10u2_i386.deb"
-  "https://security.debian.org/debian-security/pool/updates/main/q/qt4-x11/libqtcore4_4.8.7+dfsg-18+deb10u2_i386.deb"
-  "https://security.debian.org/debian-security/pool/updates/main/q/qt4-x11/libqtgui4_4.8.7+dfsg-18+deb10u2_i386.deb"
 )
 sha256sums=(
   '94030db95ee681224033bce3cc00d7ea61b10ff00a93e1d29c2459a35bd45121'
-  ''
-  ''
-  ''
-  '3a65a3ab3d8b2be2e705481c61a330d60c36dcfd643518a7c778f15c4d6e16da' # https://packages.debian.org/bookworm/i386/libaudio2/download
-  'ebee17275d026d96571503047a2422bedb743fe25a7c8ec750a5d8a43fb49755' # https://packages.debian.org/buster/i386/libqt4-network/download
-  '8db5754f5c77fc029557d00eedc4120662bed51b225fea747a584d89558aee68' # https://packages.debian.org/buster/i386/libqtcore4/download
-  ''
+  '0890252fd2a6312f03e78efbf82eebe82a8708fdda6470e780b75ee8d42a7f9c'
+  '37a6de999ff394893673296f0bb2a037d2c45053b0f95362f7880aaeab6249c2'
 )
 
 build() {
@@ -58,23 +48,9 @@ package_gog-shadowrun-returns-editor() {
     'lib32-fontconfig'
     'lib32-libsm'
     'lib32-libxt'
-    #XXX: Also these. Unable to find and/or build, so retrieved from deb packages:
-    #libQtGui.so.4, libQtNetwork.so.4, libQtCore.so.4
-    #libaudio.so.2 : 'lib32-nas' (https://aur.archlinux.org/packages/nas)
+    'lib32-qt4'
+    'xdg-launcher'
   )
-  install -Dm644 "${srcdir}/libaudio2/data/usr/lib/i386-linux-gnu/libaudio.so.2.4" \
-    "${pkgdir}/opt/shadowrun/returns/lib32/libaudio.so.2.4"
-  ln -s /opt/shadowrun/returns/lib32/libaudio.so.2.4 "${pkgdir}/opt/shadowrun/returns/lib32/libaudio.so.2"
-  install -Dm644 "${srcdir}/libqt4-network/data/usr/lib/i386-linux-gnu/libQtNetwork.so.4.8.7" \
-    "${pkgdir}/opt/shadowrun/returns/lib32/libQtNetwork.so.4.8.7"
-  ln -s /opt/shadowrun/returns/lib32/libQtNetwork.so.4.8.7 "${pkgdir}/opt/shadowrun/returns/lib32/libQtNetwork.so.4"
-  install -Dm644 "${srcdir}/libqtcore4/data/usr/lib/i386-linux-gnu/libQtCore.so.4.8.7" \
-    "${pkgdir}/opt/shadowrun/returns/lib32/libQtCore.so.4.8.7"
-  ln -s /opt/shadowrun/returns/lib32/libQtCore.so.4.8.7 "${pkgdir}/opt/shadowrun/returns/lib32/libQtCore.so.4"
-  install -Dm644 "${srcdir}/libqtgui4/data/usr/lib/i386-linux-gnu/libQtGui.so.4.8.7" \
-    "${pkgdir}/opt/shadowrun/returns/lib32/libQtGui.so.4.8.7"
-  ln -s /opt/shadowrun/returns/lib32/libQtGui.so.4.8.7 "${pkgdir}/opt/shadowrun/returns/lib32/libQtGui.so.4"
-
   install -Dm755 "${srcdir}/data/noarch/game/ShadowrunEditor" "${pkgdir}/opt/shadowrun/returns/ShadowrunEditor"
 }
 
