--- a/desperados/PKGBUILD
+++ b/desperados/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=gog-desperados1
 _pkgname="${pkgname#*-}"
 pkgver=1.0.2
-pkgrel=3
+pkgrel=4
 pkgdesc="Desperados: Wanted Dead or Alive (GOG version)"
 arch=('x86_64') #TODO: 'i686'
 url="https://www.gog.com/en/game/desperados_wanted_dead_or_alive"
@@ -36,14 +36,15 @@ package() {
   install -Dm755 "${srcdir}/data/noarch/game/desperados_launcher.sh" "${pkgdir}/usr/bin/${_pkgname}"
   install -Dm644 "${srcdir}/data/noarch/game/libdbus-1.so.3" "${pkgdir}/opt/${_pkgname}/libdbus-1.so.3"
   install -Dm755 "${srcdir}/data/noarch/game/desperados32" "${pkgdir}/opt/${_pkgname}/desperados32"
-  install -Dm644 "${srcdir}/Desperados_Wanted_Dead_or_Alive.desktop" "${pkgdir}/usr/share/applications/Desperados_Wanted_Dead_or_Alive.desktop"
+  install -Dm644 "${srcdir}/Desperados_Wanted_Dead_or_Alive.desktop" \
+    "${pkgdir}/usr/share/applications/com.gog.Desperados.Wanted_Dead_or_Alive.desktop"
   install -Dm644 "${srcdir}/data/noarch/support/icon.png" "${pkgdir}/usr/share/icons/hicolor/256x256/apps/${_pkgname}.png"
   install -Dm644 "${srcdir}/data/noarch/docs/End User License Agreement.txt" "${pkgdir}/usr/share/licenses/gog/${_pkgname}.eula"
   install -Dm644 "${srcdir}/Desperados_manual/Desperados_Manual.pdf" "${pkgdir}/opt/${_pkgname}/Desperados_Manual.pdf"
 
   cd "${srcdir}/data/noarch/game/"
   for each in bootmenu data demo localisation localisation_demo shaders; do
-    find ${each} -type f -printf '%P\0' | xargs -0 -I {} install -Dm644 "${each}/{}" "${pkgdir}/opt/${_pkgname}/${each}/{}"
+    find ${each} -type f -exec install -Dm644 "{}" "${pkgdir}/opt/${_pkgname}/{}" \;
   done
 }
 
