--- a/ziggurat/PKGBUILD
+++ b/ziggurat/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=gog-ziggurat
 _pkgname="${pkgname#*-}"
 pkgver=2.3.0.5
-pkgrel=1
+pkgrel=3
 pkgdesc="A Dungeon-Crawling First Person Shooter (GOG version)"
 arch=('x86_64') #TODO: test 'i686'
 url="https://www.gog.com/en/game/ziggurat"
@@ -28,7 +28,7 @@ sha256sums=(
 )
 
 package() {
-  install -Dm644 "${srcdir}/${_pkgname}.desktop" "${pkgdir}/usr/share/applications/${_pkgname}.desktop"
+  install -Dm644 "${srcdir}/${_pkgname}.desktop" "${pkgdir}/usr/share/applications/com.gog.${_pkgname}.desktop"
   install -Dm755 "${srcdir}/${_pkgname}.sh" "${pkgdir}/usr/bin/${_pkgname}"
 
   cd "${srcdir}/data/noarch/"
